--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_test?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=w29.21.28
+spring.session.store-type=jdbc
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:org/springframework/session/jdbc/schema-mysql.sql
