--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=MyFolder_Sever
 server.port=8081
 spring.profiles.active=development
+spring.session.store-type=none
+jwt.expiration=7d
+jwt.secret=j6X3Z5fLMtRgkHZZ0qH4LJGzozrpKUxNrd07Y4mBgZw=
