--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=MyFolder_Sever
 server.port=8081
-spring.profiles.active=development
+spring.profiles.active=formal
 spring.session.store-type=none
 jwt.expiration=7d
 jwt.secret=j6X3Z5fLMtRgkHZZ0qH4LJGzozrpKUxNrd07Y4mBgZw=
+logging.level.root=info
+logging.level.xyz.suonan.myfolder_sever.Controller.FileHttpController=warn
+logging.file.name=logs/myapp.log
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
