--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myfolder?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=w29.21.28
-basePath=G:/java_projects/MyFolder_Sever/SharePath
+#basePath=G:/java_projects/MyFolder_Sever/SharePath
+basePath=~/share
