--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myfolder?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://123.57.28.236:3306/myfolder_development?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=w29.21.28
+spring.datasource.password=iBC:EY3Cegh;
 #basePath=G:/java_projects/MyFolder_Sever/SharePath
 basePath=~/share
