预留了文件夹上传的api

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://123.57.28.236:3306/myfolder_development?useUn
 spring.datasource.username=root
 spring.datasource.password=iBC:EY3Cegh;
 #basePath=G:/java_projects/MyFolder_Sever/SharePath
-basePath=~/share
+#basePath=~/share
+basePath=/root/shareTest
