--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -4,3 +4,5 @@ spring.datasource.password=iBC:EY3Cegh;
 #basePath=G:/java_projects/MyFolder_Sever/SharePath
 #basePath=~/share
 basePath=/root/shareTest
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
